# gde2-utils

./: COPYING.docs  COPYING.libs  Makefile.am  NEWS  README  THANKS  autogen.sh  configure.ac
.tx/: config
baobab/: ChangeLog
baobab/data/: Makefile.am  gde2-disk-usage-analyzer.1  gde2-disk-usage-analyzer.appdata.xml.in  gde2-disk-usage-analyzer.desktop.in.in  org.gde2.disk-usage-analyzer.gschema.xml.in
baobab/help/: ChangeLog  Makefile.am
baobab/help/C/: index.docbook  legal.xml
baobab/help/ca/: ca.po
baobab/help/cs/: cs.po
baobab/help/da/: da.po
baobab/help/de/: de.po
baobab/help/el/: el.po
baobab/help/en_GB/: en_GB.po
baobab/help/es/: es.po
baobab/help/eu/: eu.po
baobab/help/fi/: fi.po
baobab/help/fr/: fr.po
baobab/help/it/: it.po
baobab/help/oc/: oc.po
baobab/help/pl/: pl.po
baobab/help/ru/: ru.po
baobab/help/sv/: sv.po
baobab/help/uk/: uk.po
baobab/help/zh_CN/: zh_CN.po
baobab/help/zh_HK/: zh_HK.po
baobab/help/zh_TW/: zh_TW.po
baobab/pixmaps/: Makefile.am
baobab/pixmaps/24x24/: Makefile.am
baobab/pixmaps/scalable/: Makefile.am
baobab/src/: Makefile.am  baobab-prefs.c  baobab-remote-connect-dialog.c  baobab.c  baobab.h  callbacks.c
gde2-dictionary/: README  TODO
gde2-dictionary/data/: Makefile.am  gde2-dictionary.1  gde2-dictionary.appdata.xml.in  gde2-dictionary.desktop.in.in  org.gde2.DictionaryApplet.gde2-panel-applet.in.in  org.gde2.dictionary.gschema.xml.in  org.gde2.panel.applet.DictionaryAppletFactory.service.in
gde2-dictionary/docs/: source-configuration.txt
gde2-dictionary/docs/reference/gdict/: ChangeLog  Makefile.am  gdict-docs.sgml
gde2-dictionary/help/: ChangeLog  Makefile.am
gde2-dictionary/help/C/: index.docbook
gde2-dictionary/help/ca/: ca.po
gde2-dictionary/help/cs/: cs.po
gde2-dictionary/help/da/: da.po
gde2-dictionary/help/de/: de.po
gde2-dictionary/help/el/: el.po
gde2-dictionary/help/en_GB/: en_GB.po
gde2-dictionary/help/es/: es.po
gde2-dictionary/help/eu/: eu.po
gde2-dictionary/help/fi/: fi.po
gde2-dictionary/help/fr/: fr.po
gde2-dictionary/help/it/: it.po
gde2-dictionary/help/oc/: oc.po
gde2-dictionary/help/ru/: ru.po
gde2-dictionary/help/sv/: sv.po
gde2-dictionary/help/uk/: uk.po
gde2-dictionary/help/zh_CN/: zh_CN.po
gde2-dictionary/libgdict/: Makefile.am  gde2-dict.pc.in  gdict-client-context.c
gde2-dictionary/src/: Makefile.am  gdict-about.c  gdict-about.h  gdict-app.c  gdict-app.h  gdict-applet.c  gdict-applet.h  gdict-common.c  gdict-common.h  gdict-pref-dialog.c  gdict-pref-dialog.h  gdict-print.c  gdict-print.h  gdict-source-dialog.c  gdict-source-dialog.h  gdict-window.c  gdict-window.h  main.c
gde2-screenshot/: ChangeLog
gde2-screenshot/data/: Makefile.am  gde2-screenshot.1  gde2-screenshot.appdata.xml.in  gde2-screenshot.desktop.in  org.gde2.screenshot.gschema.xml.in
gde2-screenshot/src/: Makefile.am  gde2-screenshot.c  screenshot-dialog.c  screenshot-dialog.h  screenshot-save.c  screenshot-save.h  screenshot-shadow.c  screenshot-shadow.h  screenshot-utils.c  screenshot-utils.h  screenshot-xfer.c  screenshot-xfer.h
gsearchtool/: ChangeLog  Makefile.am
gsearchtool/data/: Makefile.am  gde2-search-tool.1  gde2-search-tool.appdata.xml.in  gde2-search-tool.desktop.in  org.gde2.search-tool.gschema.xml.in
gsearchtool/help/: ChangeLog  Makefile.am
gsearchtool/help/C/: index.docbook
gsearchtool/help/ca/: ca.po
gsearchtool/help/cs/: cs.po
gsearchtool/help/de/: de.po
gsearchtool/help/el/: el.po
gsearchtool/help/en_GB/: en_GB.po
gsearchtool/help/es/: es.po
gsearchtool/help/eu/: eu.po
gsearchtool/help/fi/: fi.po
gsearchtool/help/fr/: fr.po
gsearchtool/help/it/: it.po
gsearchtool/help/ko/: ko.po
gsearchtool/help/oc/: oc.po
gsearchtool/help/ru/: ru.po
gsearchtool/help/sv/: sv.po
gsearchtool/help/uk/: uk.po
gsearchtool/help/zh_CN/: zh_CN.po
gsearchtool/libeggsmclient/: eggdesktopfile.c  eggsmclient-xsmp.c  eggsmclient.c
gsearchtool/libmateui-deprecated/: Makefile.am  gsearchtool-entry.c
gsearchtool/src/: Makefile.am  gsearchtool-callbacks.c  gsearchtool-callbacks.h  gsearchtool-support.c  gsearchtool-support.h  gsearchtool.c  gsearchtool.h
logview/: ChangeLog  TODO
logview/data/: Makefile.am  gde2-system-log.1  gde2-system-log.desktop.in.in  org.gde2.system-log.gschema.xml.in
logview/data/icons/: Makefile.am
logview/help/: ChangeLog  Makefile.am
logview/help/C/: index.docbook
logview/help/ca/: ca.po
logview/help/cs/: cs.po
logview/help/de/: de.po
logview/help/el/: el.po
logview/help/en_GB/: en_GB.po
logview/help/es/: es.po
logview/help/eu/: eu.po
logview/help/fi/: fi.po
logview/help/fr/: fr.po
logview/help/it/: it.po
logview/help/ko/: ko.po
logview/help/oc/: oc.po
logview/help/ru/: ru.po
logview/help/sv/: sv.po
logview/help/uk/: uk.po
logview/help/zh_CN/: zh_CN.po
logview/src/: Makefile.am  logview-about.h  logview-app.c  logview-filter-manager.c  logview-filter-manager.h  logview-filter.c  logview-filter.h  logview-log.c  logview-main.c  logview-prefs.c  logview-window.c
po/: ChangeLog  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  frp.po  ga.po  gl.po  (+65 more)
