@YELP_HELP_RULES@

HELP_ID = gde2-dictionary
HELP_FILES = index.docbook legal.xml

HELP_LINGUAS = ca cs da de el en_GB es eu fi fr it oc ru sv uk zh_CN

HELP_MEDIA =                                      \
	figures/gde2-dictionary-add-source.png        \
	figures/gde2-dictionary-applet.png            \
	figures/gde2-dictionary-applet-window.png     \
	figures/gde2-dictionary-application.png       \
	figures/gde2-dictionary-find.png              \
	figures/gde2-dictionary-lookup.png            \
	figures/gde2-dictionary-preferences-print.png \
	figures/gde2-dictionary-preferences-source.png
